--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,25 @@
-boto3==1.22.7
-botocore==1.25.7
-pytest==7.1.2
-python-dotenv==0.20.0
-SQLAlchemy==1.4.36
+async-generator==1.10
+attrs==21.4.0
+autopep8==1.6.0
+certifi==2022.5.18.1
+cffi==1.15.0
+cryptography==37.0.2
+decorator==5.1.1
+h11==0.13.0
+idna==3.3
+outcome==1.1.0
+pycodestyle==2.8.0
+pycparser==2.21
+pyOpenSSL==22.0.0
+PySocks==1.7.1
+PyVirtualDisplay==3.0
+selenium==4.2.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+text2num==2.4.0
+toml==0.10.2
+trio==0.20.0
+trio-websocket==0.9.2
+urllib3==1.26.9
+validators==0.19.0
+wsproto==1.1.0
