--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,17 +7,19 @@ jobs:
   deploy-containerized-lambda:
     runs-on: ubuntu-latest
     env:
-      AWS_FUNCTION_NAME: word-artist-prod
+      FUNCTION_NAME: word-artist-prod
     steps:
-      - name: Push to Amazon ECR
+      - name: Build Image
+        run: docker build -t $FUNCTION_NAME .
+      - name: Push Image to Amazon ECR
         uses: jwalton/gh-ecr-push@v1.3.5
         with:
           access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           region: ${{ secrets.AWS_REGION }}
           image: ${{ secrets.AWS_IMG_URI }}
-          local-image: word-artist-prod:latest
+          local-image: $FUNCTION_NAME:latest
 
       - name: Update AWS Lambda Image
-        run: aws lambda update-function-code --region ${{ secrets.AWS_REGION }} --function-name $AWS_FUNCTION_NAME --image-uri ${{ secrets.AWS_IMG_URI }}
+        run: aws lambda update-function-code --region ${{ secrets.AWS_REGION }} --function-name $FUNCTION_NAME --image-uri ${{ secrets.AWS_IMG_URI }}
 
