--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       FUNCTION_NAME: word-artist-prod
     steps:
       - name: Build Image
-        run: docker build -t ${{ FUNCTION_NAME }} .
+        run: docker build -t word-artist-prod .
       - name: Push Image to Amazon ECR
         uses: jwalton/gh-ecr-push@v1.3.5
         with:
@@ -18,7 +18,7 @@ jobs:
           secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           region: ${{ secrets.AWS_REGION }}
           image: ${{ secrets.AWS_IMG_URI }}
-          local-image: ${{ FUNCTION_NAME }}:latest
+          local-image: word-artist-prod:latest
 
       - name: Update AWS Lambda Image
         run: aws lambda update-function-code --region ${{ secrets.AWS_REGION }} --function-name $FUNCTION_NAME --image-uri ${{ secrets.AWS_IMG_URI }}
