--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,11 @@ on:
 jobs:
   deploy-containerized-lambda:
     runs-on: ubuntu-latest
-    # env:
-    #   FUNCTION_NAME: word-artist-prod
+    env:
+      FUNCTION_NAME: word-artist-prod
     steps:
       - name: Build Image
-        run: docker build -t word-artist-prod /home/runner/work/word-artist/Dockerfile
+        run: docker build -t ${{ env.FUNCTION_NAME }} ./Dockerfile
       - name: Push Image to Amazon ECR
         uses: jwalton/gh-ecr-push@v1.3.5
         with:
@@ -18,8 +18,8 @@ jobs:
           secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           region: ${{ secrets.AWS_REGION }}
           image: ${{ secrets.AWS_IMG_URI }}
-          local-image: word-artist-prod:latest
+          local-image: ${{ env.FUNCTION_NAME }}:latest
 
       - name: Update AWS Lambda Image
-        run: aws lambda update-function-code --region ${{ secrets.AWS_REGION }} --function-name word-artist-prod --image-uri ${{ secrets.AWS_IMG_URI }}
+        run: aws lambda update-function-code --region ${{ secrets.AWS_REGION }} --function-name ${{ env.FUNCTION_NAME }} --image-uri ${{ secrets.AWS_IMG_URI }}
 
