Added .env.* files to .gitignore.

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@
 # AWS
 AWS_SECRET_ACCESS_KEY=a
 AWS_ACCESS_KEY_ID=a
-AWS_DEFAULT_REGION=a
+AWS_DEFAULT_REGION=eu-west-3
+AWS_BUCKET_NAME=word-artist
 
 # RDS
 SQL=
