--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,8 @@ jobs:
       TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TF_VAR_AWS_REGION: ${{ secrets.AWS_REGION }}
+      TF_VAR_AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
+
     steps:
       # Checkout the repository to the GitHub Actions runner
       - name: Checkout
