Change bucket name input terraform variable.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,6 @@ jobs:
       TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TF_VAR_AWS_REGION: ${{ secrets.AWS_REGION }}
-      TF_VAR_AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
 
     steps:
       # Checkout the repository to the GitHub Actions runner
@@ -112,7 +111,8 @@ jobs:
         run: |
           export TF_VAR_deployed_at=$(date +%s)
           if [[ -n ${{ secrets.AWS_ECR_REPO }} ]]; then ECR_REPO_NAME=${{ secrets.AWS_ECR_REPO }}; else ECR_REPO_NAME=${{ github.event.repository.name }}; fi
-          terraform plan -var=REPOSITORY_NAME=${{ github.event.repository.name }} -var=AWS_ECR_REPO=$ECR_REPO_NAME
+          if [[ -n ${{ secrets.AWS_BUCKET_NAME }} ]]; then ECR_REPO_NAME=${{ secrets.AWS_BUCKET_NAME }}; else ECR_REPO_NAME=${{ github.event.repository.name }}; fi
+          terraform plan -var=REPOSITORY_NAME=${{ github.event.repository.name }} -var=AWS_ECR_REPO=$ECR_REPO_NAME -var=AWS_BUCKET_NAME=$BUCKET_NAME
 
         # On push to "main", build or change infrastructure according to Terraform configuration files
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
@@ -121,7 +121,8 @@ jobs:
         run: |
           export TF_VAR_deployed_at=$(date +%s)
           if [[ -n ${{ secrets.AWS_ECR_REPO }} ]]; then ECR_REPO_NAME=${{ secrets.AWS_ECR_REPO }}; else ECR_REPO_NAME=${{ github.event.repository.name }}; fi
-          terraform apply -auto-approve -var=REPOSITORY_NAME=${{ github.event.repository.name }} -var=AWS_ECR_REPO=$ECR_REPO_NAME
+          if [[ -n ${{ secrets.AWS_BUCKET_NAME }} ]]; then ECR_REPO_NAME=${{ secrets.AWS_BUCKET_NAME }}; else ECR_REPO_NAME=${{ github.event.repository.name }}; fi
+          terraform plan -var=REPOSITORY_NAME=${{ github.event.repository.name }} -var=AWS_ECR_REPO=$ECR_REPO_NAME -var=AWS_BUCKET_NAME=$BUCKET_NAME
 
   removing-images:
     name: "Removing previous ECR images"
