--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
 async-generator==1.10
 attrs==21.4.0
 autopep8==1.6.0
+boto3==1.24.12
+botocore==1.27.12
 certifi==2022.5.18.1
 cffi==1.15.0
 cryptography==37.0.2
 decorator==5.1.1
 h11==0.13.0
 idna==3.3
+jmespath==1.0.1
 outcome==1.1.0
 pycodestyle==2.8.0
 pycparser==2.21
 pyOpenSSL==22.0.0
 PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==0.20.0
 PyVirtualDisplay==3.0
+s3transfer==0.6.0
 selenium==4.2.0
+six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 text2num==2.4.0
