--- a/workflows/main.yml
+++ b/workflows/main.yml
@@ -53,6 +53,10 @@ on:
 permissions:
   contents: read
 
+env:
+  AWS_REGION: "${{ secrets.AWS_REGION }} "
+  ECR_REPO: "${{ secrets.AWS_ECR_REPO != '' || github.event.repository.name }}"
+
 jobs:
   test:
     name: Test
@@ -63,7 +67,7 @@ jobs:
       - name: Unit Tests
         run: echo "Mocking Unit Tests"
 
-  build:
+  terraform:
     name: "Deploy using Terraform"
     needs: [test]
     if: ${{ always() && (!contains(join(needs.*.result, ','), 'failure') && !contains(join(needs.*.result, ','), 'cancelled') && contains(join(needs.*.result, ','), 'success')) }}
@@ -77,7 +81,7 @@ jobs:
     env:
       TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      TF_VAR_AWS_REGION: ${{ secrets.AWS_REGION }}
+      TF_VAR_AWS_REGION: ${{ env.AWS_REGION }}
     steps:
       # Checkout the repository to the GitHub Actions runner
       - name: Checkout
@@ -89,7 +93,7 @@ jobs:
           # role-to-assume: arn:aws:iam::123456789100:role/my-github-actions-role
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: ${{ env.AWS_REGION }}
 
       # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
       - name: Setup Terraform
@@ -109,8 +113,7 @@ jobs:
       - name: Terraform Plan
         run: |
           export TF_VAR_deployed_at=$(date +%s)
-          if [[ -n ${{ secrets.AWS_ECR_REPO }} ]]; then ECR_REPO_NAME=${{ secrets.AWS_ECR_REPO }}; else ECR_REPO_NAME=${{ github.event.repository.name }}; fi
-          terraform plan -var=REPOSITORY_NAME=${{ github.event.repository.name }} -var=AWS_ECR_REPO=$ECR_REPO_NAME
+          terraform plan -var=REPOSITORY_NAME=${{ github.event.repository.name }} -var=AWS_ECR_REPO=$ECR_REPO
 
         # On push to "main", build or change infrastructure according to Terraform configuration files
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
@@ -118,8 +121,43 @@ jobs:
         # if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
         run: |
           export TF_VAR_deployed_at=$(date +%s)
-          if [[ -n ${{ secrets.AWS_ECR_REPO }} ]]; then ECR_REPO_NAME=${{ secrets.AWS_ECR_REPO }}; else ECR_REPO_NAME=${{ github.event.repository.name }}; fi
-          terraform apply -auto-approve -var=REPOSITORY_NAME=${{ github.event.repository.name }} -var=AWS_ECR_REPO=$ECR_REPO_NAME
+          terraform apply -auto-approve -var=REPOSITORY_NAME=${{ github.event.repository.name }} -var=AWS_ECR_REPO=$ECR_REPO
+
+  deploy:
+    name: "Deploy"
+    needs: [terraform]
+    if: ${{ always() && (!contains(join(needs.*.result, ','), 'failure') && !contains(join(needs.*.result, ','), 'cancelled') && contains(join(needs.*.result, ','), 'success')) }}
+    runs-on: ubuntu-latest
+    environment: production
+
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@aaf69d68aa3fb14c1d5a6be9ac61fe15b48453a2
+
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker build -t $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
+          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG"
 
   removing-images:
     name: "Removing previous ECR images"
@@ -142,15 +180,15 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
       - name: Remove previous ECR images
         run: |
-          if [[ -n ${{ secrets.AWS_ECR_REPO }} ]]; then ECR_REPO_NAME=${{ secrets.AWS_ECR_REPO }}; else ECR_REPO_NAME=${{ github.event.repository.name }}; fi
-          IMAGES_TO_DELETE=$( aws ecr list-images --repository-name $ECR_REPO_NAME --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json )
+          if [[ -n ${{ secrets.AWS_ECR_REPO }} ]]; then ECR_REPO=${{ secrets.AWS_ECR_REPO }}; else ECR_REPO=${{ github.event.repository.name }}; fi
+          IMAGES_TO_DELETE=$( aws ecr list-images --repository-name $ECR_REPO --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json )
           N_IMAGES=${#IMAGES_TO_DELETE[@]}
           if [[ -n ${{ secrets.N_OLD_IMAGES_TO_KEEP }} ]]; then N_OLD_IMAGES_TO_KEEP=${{ secrets.N_OLD_IMAGES_TO_KEEP }}; else N_OLD_IMAGES_TO_KEEP=0; fi
-          if (( $N_IMAGES > $N_OLD_IMAGES_TO_KEEP )); then aws ecr batch-delete-image --repository-name $ECR_REPO_NAME --image-ids "${IMAGES_TO_DELETE[@]:$N_OLD_IMAGES_TO_KEEP}"; else echo "No images to delete. Current images: $N_IMAGES"; fi
+          if (( $N_IMAGES > $N_OLD_IMAGES_TO_KEEP )); then aws ecr batch-delete-image --repository-name $ECR_REPO --image-ids "${IMAGES_TO_DELETE[@]:$N_OLD_IMAGES_TO_KEEP}"; else echo "No images to delete. Current images: $N_IMAGES"; fi
 
   slack-notification:
     runs-on: ubuntu-latest
-    needs: [build, test, removing-images]
+    needs: [terraform, deploy, test, removing-images]
     if: always()
     steps:
       - uses: martialonline/workflow-status@v2
