--- a/workflows/main.yml
+++ b/workflows/main.yml
@@ -42,7 +42,7 @@
 #       with:
 #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-name: "Testless Terraform Deploy"
+name: "AWS Deploy"
 
 on:
   push:
