--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ permissions:
   contents: read
 
 env:
-  AWS_REGION: "${{ secrets.AWS_REGION }}"
+  AWS_REGION: eu-west-3
   ECR_REPO: "${{ secrets.AWS_ECR_REPO!='' || github.event.repository.name }}"
 
 jobs:
