--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,9 +54,10 @@ permissions:
   contents: read
 
 env:
+  ENV: "prod"
   AWS_DEFAULT_REGION: "${{ secrets.AWS_REGION }}"
   ECR_REPO: "${{ secrets.AWS_ECR_REPO }}"
-  BUCKET_NAME: "${{ secrets.AWS_BUCKET_NAME }}"
+  BUCKET_NAME: "${{ secrets.AWS_BUCKET_NAME != '' secrets.AWS_BUCKET_NAME || github.event.repository.name }}"
 
 jobs:
   test:
@@ -122,7 +123,6 @@ jobs:
         # if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
         run: |
           export TF_VAR_deployed_at=$(date +%s)
-          if [[ -n ${{ secrets.AWS_ECR_REPO }} ]]; then ECR_REPO=${{ secrets.AWS_ECR_REPO }}; else ECR_REPO=${{ github.event.repository.name }}; fi
           terraform apply -auto-approve -var=REPOSITORY_NAME=${{ github.event.repository.name }} -var=AWS_ECR_REPO=$ECR_REPO  -var=AWS_BUCKET_NAME=$BUCKET_NAME
 
   deploy:
@@ -157,7 +157,6 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          if [[ -n ${{ secrets.AWS_ECR_REPO }} ]]; then ECR_REPO=${{ secrets.AWS_ECR_REPO }}; else ECR_REPO=${{ github.event.repository.name }}; fi
           docker build -t $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG"
@@ -183,7 +182,6 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
       - name: Remove previous ECR images
         run: |
-          if [[ -n ${{ secrets.AWS_ECR_REPO }} ]]; then ECR_REPO=${{ secrets.AWS_ECR_REPO }}; else ECR_REPO=${{ github.event.repository.name }}; fi
           IMAGES_TO_DELETE=$( aws ecr list-images --repository-name $ECR_REPO --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json )
           N_IMAGES=${#IMAGES_TO_DELETE[@]}
           if [[ -n ${{ secrets.N_OLD_IMAGES_TO_KEEP }} ]]; then N_OLD_IMAGES_TO_KEEP=${{ secrets.N_OLD_IMAGES_TO_KEEP }}; else N_OLD_IMAGES_TO_KEEP=0; fi
