Change bucket and ecr repo naming: added env tag.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,10 +54,9 @@ permissions:
   contents: read
 
 env:
-  ENV: "prod"
   AWS_DEFAULT_REGION: "${{ secrets.AWS_REGION }}"
-  ECR_REPO: "${{ secrets.AWS_ECR_REPO }}"
-  BUCKET_NAME: "${{ secrets.AWS_BUCKET_NAME || github.event.repository.name }}-${{ env.ENV }}"
+  ECR_REPO: "${{ secrets.AWS_ECR_REPO || github.event.repository.name }}-${{ secrets.ENV_TAG }}"
+  BUCKET_NAME: "${{ secrets.AWS_BUCKET_NAME || github.event.repository.name }}-${{ secrets.ENV_TAG }}"
 
 jobs:
   test:
