--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,7 @@ jobs:
     env:
       TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      TF_VAR_AWS_REGION: ${{ env.AWS_DEFAULT_REGION }}
+      TF_VAR_AWS_REGION: ${{ secrets.AWS_REGION }}
     steps:
       # Checkout the repository to the GitHub Actions runner
       - name: Checkout
