--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
       TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TF_VAR_AWS_REGION: ${{ secrets.AWS_REGION }}
+      ENV_TAG: ${{ secrets.ENV_TAG }}
       ECR_REPO: "${{ github.event.repository.name }}-${{ secrets.ENV_TAG }}"
       LAMBDA_FUNCTION: "${{ github.event.repository.name }}-${{ secrets.ENV_TAG }}"
       BUCKET_NAME: "${{ github.event.repository.name }}-${{ secrets.ENV_TAG }}"
