Fixing Github actions main workflow.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,15 +119,14 @@ jobs:
           LAMBDA_FUNCTION: ${{ steps.terraform-apply.outputs.lambda_function }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          export IMAGE_URI=$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
-          docker build -t $IMAGE_URI .
-          docker push $IMAGE_URI
-          echo "::set-output name=image::$IMAGE_URI"
+          docker build -t $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
+          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG"
 
       - name: Update Lambda's Image
         id: update-lambda
         run: |
-          aws lambda update-function-code --region $AWS_DEFAULT_REGION --function-name $LAMBDA_FUNCTION --image-uri $IMAGE_URI
+          aws lambda update-function-code --region $AWS_DEFAULT_REGION --function-name $LAMBDA_FUNCTION --image-uri $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
 
   removing-images:
     name: "Removing previous ECR images"
