Fixing missing env varibale.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -151,10 +151,10 @@ jobs:
           ECR_REPO: ${{ steps.terraform-apply.outputs.ecr_repo }}
       - name: Remove previous ECR images
         run: |
-          IMAGES_TO_DELETE=$( aws ecr list-images --repository-name $ECR_REPO --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json )
+          IMAGES_TO_DELETE=$( aws ecr list-images --repository-name ${{ env.ECR_REPO }} --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json )
           N_IMAGES=${#IMAGES_TO_DELETE[@]}
           if [[ -n ${{ secrets.N_OLD_IMAGES_TO_KEEP }} ]]; then N_OLD_IMAGES_TO_KEEP=${{ secrets.N_OLD_IMAGES_TO_KEEP }}; else N_OLD_IMAGES_TO_KEEP=0; fi
-          if (( $N_IMAGES > $N_OLD_IMAGES_TO_KEEP )); then aws ecr batch-delete-image --repository-name $ECR_REPO --image-ids "${IMAGES_TO_DELETE[@]:$N_OLD_IMAGES_TO_KEEP}"; else echo "No images to delete. Current images: $N_IMAGES"; fi
+          if (( $N_IMAGES > $N_OLD_IMAGES_TO_KEEP )); then aws ecr batch-delete-image --repository-name ${{ env.ECR_REPO }} --image-ids "${IMAGES_TO_DELETE[@]:$N_OLD_IMAGES_TO_KEEP}"; else echo "No images to delete. Current images: $N_IMAGES"; fi
 
   slack-notification:
     runs-on: ubuntu-latest
