--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,20 +117,20 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPO: ${{ steps.terraform-apply.outputs.ecr_repo }}
+          ECR_REPO: ${{ job.terraform.steps.terraform-apply.outputs.ecr_repo }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
           IMAGE_URI=$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
-          echo "::set-output name=image::$IMAGE_URI"
+          echo "::set-output name=image_uri::$IMAGE_URI"
 
       - name: Update Lambda's Image
         id: update-lambda
         env:
-          LAMBDA_FUNCTION: ${{ steps.terraform-apply.outputs.lambda_function }}
+          LAMBDA_FUNCTION: ${{ job.terraform.steps.terraform-apply.outputs.lambda_function }}
         run: |
-          IMAGE_URI=$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
+          IMAGE_URI=${{ steps.build-image.outputs.image_uri }}
           aws lambda update-function-code --region $AWS_DEFAULT_REGION --function-name $LAMBDA_FUNCTION --image-uri $IMAGE_URI
 
   removing-images:
@@ -152,7 +152,7 @@ jobs:
           aws-region: ${{ env.AWS_DEFAULT_REGION }}
         env:
           AWS_EC2_METADATA_DISABLED: true
-          ECR_REPO: ${{ steps.terraform-apply.outputs.ecr_repo }}
+          ECR_REPO: ${{ job.terraform.steps.terraform-apply.outputs.ecr_repo }}
       - name: Remove previous ECR images
         run: |
           IMAGES_TO_DELETE=$( aws ecr list-images --repository-name $ECR_REPO --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json )
