--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,7 +119,8 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           # ECR_REPO: ${{ job.terraform.steps.terraform-apply.outputs.ecr_repo }}
           ECR_REPO: word-artist-prod
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: latest
+          # IMAGE_TAG: ${{ github.sha }}
         run: |
           IMAGE_URI=$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
           docker build -t $IMAGE_URI .
