Implemented messages sending as App's Bot.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,14 +3,25 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        {
+    "configurations": [{
             "name": "Test Main",
             "type": "python",
             "request": "launch",
             "program": "tests/test_main.py",
             "console": "integratedTerminal",
-            "env": { "PYTHONPATH": "${workspaceRoot}"}
+            "env": {
+                "PYTHONPATH": "${workspaceRoot}"
+            }
+        },
+        {
+            "name": "Test Slack",
+            "type": "python",
+            "request": "launch",
+            "program": "tests/test_slack.py",
+            "console": "integratedTerminal",
+            "env": {
+                "PYTHONPATH": "${workspaceRoot}"
+            }
         },
         {
             "name": "Current File",
@@ -18,7 +29,9 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "env": { "PYTHONPATH": "${workspaceRoot}"}
+            "env": {
+                "PYTHONPATH": "${workspaceRoot}"
+            }
         }
     ]
 }
