--- a/requirements.txt
+++ b/requirements.txt
@@ -5,26 +5,36 @@ boto3==1.24.12
 botocore==1.27.12
 certifi==2022.5.18.1
 cffi==1.15.0
+charset-normalizer==2.1.0
 cryptography==37.0.2
 decorator==5.1.1
 h11==0.13.0
 idna==3.3
+iniconfig==1.1.1
 jmespath==1.0.1
 outcome==1.1.0
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
 pycodestyle==2.8.0
 pycparser==2.21
 pyOpenSSL==22.0.0
+pyparsing==3.0.9
 PySocks==1.7.1
+pytest==7.1.2
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 PyVirtualDisplay==3.0
+requests==2.28.1
 s3transfer==0.6.0
-selenium==4.2.0
+selenium==4.3.0
 six==1.16.0
+slack-sdk==3.17.2
 sniffio==1.2.0
 sortedcontainers==2.4.0
 text2num==2.4.0
 toml==0.10.2
+tomli==2.0.1
 trio==0.20.0
 trio-websocket==0.9.2
 urllib3==1.26.9
