--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -139,7 +139,8 @@ jobs:
   removing-images:
     name: "Removing previous ECR images"
     needs: [deploy]
-    if: ${{ always() && (!contains(join(needs.*.result, ','), 'failure') && !contains(join(needs.*.result, ','), 'cancelled') && contains(join(needs.*.result, ','), 'success')) }}
+    if: ${{ 1==0 }}
+    # if: ${{ always() && (!contains(join(needs.*.result, ','), 'failure') && !contains(join(needs.*.result, ','), 'cancelled') && contains(join(needs.*.result, ','), 'success')) }}
     runs-on: ubuntu-latest
     environment: production
     defaults:
